--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -9,23 +9,29 @@ body {
 }
 
 .container {
-    width: 60%;
-    height: 100px;
+    width: 70%;
+    height: 100vh;
     margin: 0 auto;
 }
 
-.images {
+.logo {
     text-align: center;
 }
 
-.images img {
+.logo img {
     width: 300px;
     padding: 10px;
 }
 
-.input {
+.new-todo {
     text-align: center;
+    margin-bottom: 30px;
     cursor: pointer;
+}
+
+.new-todo h4 {
+    color: brown;
+    margin-bottom: 20px;
 }
 
 .todoList ul {
