--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #bd8216;
+    background-color: #ecb349;
 }
 
 .container {
@@ -34,11 +34,60 @@ body {
     margin-bottom: 20px;
 }
 
+.new-todo input {
+    padding: 10px 20px;
+    width: 300px;
+    border-radius: 10px;
+    border: 1px solid black;
+    outline: none;
+    margin-right: 20px;
+}
+
+.new-todo button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 1px solid black;
+    outline: none;
+    cursor: pointer;
+}
+
+.todoList {
+    background-color: lightcyan;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.todoList ul li.checked {
+    color: lightgray;
+    text-decoration: line-through;
+}
+
 .todoList ul {
     list-style: none;
+    margin: 20px;
 }
 
 .todoList ul li {
-    display: flex;
-    justify-content: space-around;
+    margin: 10px;
+    padding: 15px;
+    border-bottom: 1px solid blanchedalmond;
+    cursor: pointer;
+}
+
+.todoList ul li:hover {
+    background-color: white;
+}
+
+.todoList ul li i {
+    float: right;
+    color: rgb(143, 68, 133);
+    cursor: pointer;
+}
+
+.todoList ul li i:hover {
+    color: blue;
+}
+
+.todoList ul li.last {
+    border: 0;
 }
