--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #ecb349;
-    font-family: cursive;
+    font-family: 'Shadows Into Light', cursive;
 }
 
 .container {
